# SynthTeX

./: README.md  package.json  pnpm-lock.yaml
apps/backend/: .dockerignore  .env.example  Dockerfile  main.py  package.json  pyproject.toml
apps/backend/agent/: agent.py  latex_agent.py
apps/backend/agent/tools/: fs_tools.py  tool_context.py
apps/backend/db/: get_db.py  models.py
apps/backend/routes/agent/: chat.py
apps/backend/routes/auth/: auth.py
apps/backend/routes/crud/: crud.py  models.py
apps/backend/utils/agent_tools/: file_reader.py
apps/backend/utils/auth/: isSignedin.py
apps/backend/utils/crud/: file_tree_builder.py
apps/backend/utils/s3/: uploader.py
apps/compiler/: .env.example  Dockerfile  copy_project.py  create_latex_template.py  package.json  pyproject.toml  s3.py  tasks.py  worker.py
apps/compiler/db/: create_tables.py  db.py  get_db.py  models.py
apps/compiler/utils/: e2b.py
apps/frontend/: .env.example  package.json  pnpm-lock.yaml  proxy.ts
apps/frontend/app/: bodyWrapper.tsx  globals.css  headerWrapper.tsx  layout.tsx  page.tsx  providers.tsx
apps/frontend/app/components/: features.tsx
apps/frontend/app/dashboard/: createProjectModal.tsx  page.tsx  projects.tsx
apps/frontend/app/project/[id]/: actionBar.tsx  chat.tsx  chatView.tsx  (+5 more)
apps/frontend/components/: BlurText.tsx
apps/frontend/hooks/: useCompileProject.ts
apps/frontend/stores/: editorStore.ts  layoutStore.ts
apps/frontend/types/: latex.js.d.ts  types.ts
apps/frontend/utils/: openCompilePDF.ts  sortItems.ts  tool_utils.ts
infra/: docker-compose.yml
(+12 files in other folders)
